--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                     <input type="email" name="email" placeholder="이메일*" required class="input">
                     <p>Message <i class="fa fa-pencil"></i></p>
                     <textarea name="message" placeholder="메세지*"></textarea>
-                    <input type="hidden" name="_next" value="seojinhyuk2.github.io/portfolio/thanks.html">
+                    <input type="hidden" name="_next" value="https://seojinhyuk2.github.io/portfolio/thanks.html">
                     <button type="submit" class="btn">Send</button>
                 </form>
                 <ul class="icon-wrap">
